--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -639,7 +639,7 @@
 										<td style="width: 1.5em;"><span>{{item.system.quantity}}</span></td>
 										<td style="text-align: center;"><span>{{round item.system.ttlCost 100}}</span></td>
 										<td style="text-align: center;"><span>{{round item.system.ttlWeight 100}}</span></td>
-										<td style="width: 62px;"><span>{{item.system.equipStatus}}</span></td>
+										<td style="width: 62px;"><span>{{equipStatusToString item.system.equipStatus}}</span></td>
 										<td class="item-controls" style="width: 30px;">
 											<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
 											<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
