--- a/templates/item/Custom Jewelry-sheet.html
+++ b/templates/item/Custom Jewelry-sheet.html
@@ -38,8 +38,8 @@
                 </div>
                 <div id="weight" class="equipmentStatLong">
                     <label class="resource-label">Weight:</label>
-                    <label class="resource-label">{{round item.system.weight 100}}lbs</label>
-                    <label class="resource-label"> / {{round item.system.ttlWeight 100}}lbs total</label>
+                    <label class="resource-label">{{round item.system.weight 100}}lb{{checkPlural item.system.weight}}</label>
+                    <label class="resource-label"> / {{round item.system.ttlWeight 100}}lb{{checkPlural item.system.ttlWeight}} total</label>
                 </div>
             </div>
         </div>
