--- a/templates/item/Equipment-sheet.html
+++ b/templates/item/Equipment-sheet.html
@@ -39,7 +39,7 @@
                 <div id="weight" class="equipmentStatLong">
                     <label class="resource-label">Weight:</label>
                     <input type="number" name="system.weight" value="{{item.system.weight}}" data-dtype="Number"/>
-                    <label class="resource-label"> / {{item.system.ttlWeight}}lbs total</label>
+                    <label class="resource-label"> / {{item.system.ttlWeight}}lb{{checkPlural item.system.ttlWeight}} total</label>
                 </div>
             </div>
         </div>
