--- a/templates/item/Travel Fare-sheet.html
+++ b/templates/item/Travel Fare-sheet.html
@@ -38,7 +38,7 @@
                 </div>
                 <div id="weight" class="equipmentStatLong">
                     <label class="resource-label">Weight:</label>
-                    <label class="resource-label"> {{item.system.weight}} / {{item.system.ttlWeight}}lbs total</label>
+                    <label class="resource-label"> {{item.system.weight}} / {{item.system.ttlWeight}}lb{{checkPlural item.system.ttlWeight}} total</label>
                 </div>
             </div>
         </div>
