--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -160,9 +160,11 @@
 			<div class="header">
 				<a class="item" data-tab="body-type">Body Type</a>
 			</div>
-			<div class="header">
-				<a class="item" data-tab="magic">Magic</a>
-			</div>
+			{{#if actor.system.showVanillaMagic}}
+				<div class="header">
+					<a class="item" data-tab="magic">Magic</a>
+				</div>
+			{{/if}}
 		</nav>
 
 		{{!-- Sheet Body --}}
@@ -2835,101 +2837,104 @@
 				</div>
 			</div>
 
-			{{!-- Vanilla Magic Tab --}}
-			<div id="magic" class="tab magic" data-tab="magic" data-group="primary">
-				<div style="display: flex; flex-direction: column;">
-					<table>
-						<tr>
-							<td style="width: 20%">
-								Magic Attribute
-							</td>
-							<td style="display: flex;">
-								<span><input type="text" name="system.magic.attribute" value="{{actor.system.magic.attribute}}" placeholder="Intelligence" /></span>
-								<span><input type="number" name="system.magic.attributeMod" value="{{actor.system.magic.attributeMod}}" placeholder="0" style="width: 25px"/></span>
-							</td>
-						</tr>
-						<tr>
-							<td style="width: 20%">
-								<input type="text" name="system.magic.mageryName" value="{{actor.system.magic.mageryName}}" placeholder="Magery" style="width: auto"/>
-							</td>
-							<td>
-								<input type="number" name="system.magic.magery" value="{{actor.system.magic.magery}}" placeholder="0" />
-							</td>
-						</tr>
-						<tr>
-							<td style="width: 20%">
-								Total Ability
-							</td>
-							<td>
-								{{actor.system.magic.totalMagicAttribute}}
-							</td>
-						</tr>
-						<tr>
-							<td style="width: 20%" class="tooltip">
-								Length of Staff
-								<span class="tooltiptext">
-									For the purposes of reducing range penalties for Regular spells
-								</span>
-							</td>
-							<td>
-								<input type="number" name="system.magic.staff" value="{{actor.system.magic.staff}}" placeholder="0" />
-							</td>
-						</tr>
-					</table>
-					<table>
-						<tr class="item item-header">
-							<td class="item-image"></td>
-							<td class="item-name">Spell</td>
-							<td class="item-notes">Notes</td>
-							<td class="item-college">College</td>
-							<td class="item-points">Points</td>
-							<td class="item-rolls">Level</td>
-							<td class="item-controls"></td>
-						</tr>
-						{{#each actor.system.spellCategories as |category cat|}}
-							{{#unless (eq category "")}}
-								<tr class="item item-header trait-category-header">
-									<td colspan="6">
-										<a class="accordion bold" id="s-accordion-clickable-{{category}}">{{category}}</a>
-									</td>
-								</tr>
-							{{/unless}}
-							{{#each ../items as |item id|}}
-								{{#if (eq type "Spell")}}
-									{{#if (eq item.system.subCategory category)}}
-										<tr class="item accordion-div-{{category}} accordion-open" data-item-id="{{item._id}}">
-											<td class="item-image" style="width: 24px; padding: 0 2px">
-												<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
-											</td>
-											<td class="item-name" style="width: 9em;">
-												{{item.name}}
-											</td>
-											<td class="item-notes">
-												{{item.system.shortNotes}}
-											</td>
-											<td class="item-college">
-												{{item.system.college}}
-											</td>
-											<td class="item-points">
-												{{item.system.points}}
-											</td>
-											<td class="item-skill" style="width: 3em;">
-												<label for="actor.system.level" class="fa fa-dice-six rollable" data-level="{{item.system.level}}"
-													   data-label="Makes a &lt;b&gt;{{name}}&lt;/b&gt; roll." data-type="skill"></label>
-												{{item.system.level}}
-											</td>
-											<td class="item-controls" style="width: 30px;">
-												<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
-												<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
-											</td>
-										</tr>
+			{{#if actor.system.showVanillaMagic}}
+				{{!-- Vanilla Magic Tab --}}
+				<div id="magic" class="tab magic" data-tab="magic" data-group="primary">
+					<div style="display: flex; flex-direction: column;">
+						<table>
+							<tr>
+								<td style="width: 20%">
+									Magic Attribute
+								</td>
+								<td style="display: flex;">
+									<span><input type="text" name="system.magic.attribute" value="{{actor.system.magic.attribute}}" placeholder="Intelligence" /></span>
+									<span><input type="number" name="system.magic.attributeMod" value="{{actor.system.magic.attributeMod}}" placeholder="0" style="width: 25px"/></span>
+								</td>
+							</tr>
+							<tr>
+								<td style="width: 20%">
+									<input type="text" name="system.magic.mageryName" value="{{actor.system.magic.mageryName}}" placeholder="Magery" style="width: auto"/>
+								</td>
+								<td>
+									<input type="number" name="system.magic.magery" value="{{actor.system.magic.magery}}" placeholder="0" />
+								</td>
+							</tr>
+							<tr>
+								<td style="width: 20%">
+									Total Ability
+								</td>
+								<td>
+									{{actor.system.magic.totalMagicAttribute}}
+								</td>
+							</tr>
+							<tr>
+								<td style="width: 20%" class="tooltip">
+									Length of Staff
+									<span class="tooltiptext">
+										For the purposes of reducing range penalties for Regular spells
+									</span>
+								</td>
+								<td>
+									<input type="number" name="system.magic.staff" value="{{actor.system.magic.staff}}" placeholder="0" />
+								</td>
+							</tr>
+						</table>
+						<table>
+							<tr class="item item-header">
+								<td class="item-image"></td>
+								<td class="item-name">Spell</td>
+								<td class="item-notes">Notes</td>
+								<td class="item-college">College</td>
+								<td class="item-points">Points</td>
+								<td class="item-rolls">Level</td>
+								<td class="item-controls"></td>
+							</tr>
+							{{#each actor.system.spellCategories as |category cat|}}
+								{{#unless (eq category "")}}
+									<tr class="item item-header trait-category-header">
+										<td colspan="6">
+											<a class="accordion bold" id="s-accordion-clickable-{{category}}">{{category}}</a>
+										</td>
+									</tr>
+								{{/unless}}
+								{{#each ../items as |item id|}}
+									{{#if (eq type "Spell")}}
+										{{#if (eq item.system.subCategory category)}}
+											<tr class="item accordion-div-{{category}} accordion-open" data-item-id="{{item._id}}">
+												<td class="item-image" style="width: 24px; padding: 0 2px">
+													<img src="{{item.img}}" title="{{item.name}}" width="24" height="24" />
+												</td>
+												<td class="item-name" style="width: 9em;">
+													{{item.name}}
+												</td>
+												<td class="item-notes">
+													{{item.system.shortNotes}}
+												</td>
+												<td class="item-college">
+													{{item.system.college}}
+												</td>
+												<td class="item-points">
+													{{item.system.points}}
+												</td>
+												<td class="item-skill" style="width: 3em;">
+													<label for="actor.system.level" class="fa fa-dice-six rollable" data-level="{{item.system.level}}"
+														   data-label="Makes a &lt;b&gt;{{name}}&lt;/b&gt; roll." data-type="skill"></label>
+													{{item.system.level}}
+												</td>
+												<td class="item-controls" style="width: 30px;">
+													<a class="item-control item-edit" title="Edit Item"><i class="fas fa-edit"></i></a>
+													<a class="item-control item-delete" title="Delete Item"><i class="fas fa-trash"></i></a>
+												</td>
+											</tr>
+										{{/if}}
 									{{/if}}
-								{{/if}}
+								{{/each}}
 							{{/each}}
-						{{/each}}
-					</table>
+						</table>
+					</div>
 				</div>
-			</div>
+			{{/if}}
+
 		</section>
 	</div>
 </form>
