--- a/templates/actor/actor-sheet.html
+++ b/templates/actor/actor-sheet.html
@@ -651,6 +651,22 @@
 							{{/if}}
 						{{/each}}
 					{{/each}}
+					<tr class="item item-money">
+						<td class="item-image"></td>
+						<td class="item-name"><span></span></td>
+						<td class="item-notes"><span></span></td>
+						<td><span></span></td>
+						<td><span></span></td>
+						<td><span class="bold">Money:</span></td>
+						<td style="text-align: center;">
+							<span>
+								<input type="number" name="system.bio.money" style="width: 25%" value="{{actor.system.bio.money}}" data-dtype="Number" /> $
+							</span>
+						</td>
+						<td style="text-align: center;"><span></span></td>
+						<td><span></span></td>
+						<td class="item-controls"></td>
+					</tr>
 					<tr class="item">
 						<td class="item-image"></td>
 						<td class="item-name"><span></span></td>
